set(MOOST_INCLUDE_DIR
	${CMAKE_CURRENT_SOURCE_DIR}/../
)

set(MOOST_DEFINITIONS
)

add_subdirectory(stash)
add_subdirectory(memory)
add_subdirectory(threads)
add_subdirectory(ic)
add_subdirectory(filesystem)

set(MOOST_INCLUDE_DIR
	${MOOST_INCLUDE_DIR}
	${UTILS_INCLUDE_DIR}
	${STASH_INCLUDE_DIR}
        ${THREAD_INCLUDE_DIR}
	${MEMORY_INCLUDE_DIR}
	${IC_INCLUDE_DIR}
	${FS_INCLUDE_DIR}
PARENT_SCOPE)

set(MOOST_DEFINITIONS
	${MOOST_DEFINITIONS}
	${STASH_DEFINITIONS}
        ${THREAD_DEFINITIONS}
        ${MEMORY_DEFINITIONS}
        ${IC_DEFINITIONS}
PARENT_SCOPE)

set(MOOST_LINK_DEPENDENCIES
	${MOOST_LINK_DEPENDENCIES}
	${UTILS_LINK_DEPENDENCIES}
	${STASH_LINK_DEPENDENCIES}
        ${THREAD_LINK_DEPENDENCIES}
        ${MEMORY_LINK_DEPENDENCIES}
        ${IC_LINK_DEPENDENCIES}
	${FS_LINK_DEPENDENCIES}
PARENT_SCOPE)


# forward of include directories

set(MOOST_STASH_INCLUDE_DIR
	${STASH_INCLUDE_DIR}
PARENT_SCOPE)

set(MOOST_UTILS_INCLUDE_DIR
	${UTILS_INCLUDE_DIR}
PARENT_SCOPE)

set(MOOST_MEMORY_INCLUDE_DIR
	${MEMORY_INCLUDE_DIR}
PARENT_SCOPE)

set(MOOST_THREAD_INCLUDE_DIR
	${THREAD_INCLUDE_DIR}
PARENT_SCOPE)

set(MOOST_IC_INCLUDE_DIR
	${IC_INCLUDE_DIR}
PARENT_SCOPE)

set(MOOST_FS_INCLUDE_DIR
	${FS_INCLUDE_DIR}
PARENT_SCOPE)

# forward of definitions

set(MOOST_STASH_DEFINITIONS
	${STASH_DEFINITIONS}
PARENT_SCOPE)

set(MOOST_UTILS_DEFINITIONS
	${UTILS_DEFINITIONS}
PARENT_SCOPE)

set(MOOST_THREAD_DEFINITIONS
	${THREAD_DEFINITIONS}
PARENT_SCOPE)

set(MOOST_MEMORY_DEFINITIONS
	${MEMORY_DEFINITIONS}
PARENT_SCOPE)

set(MOOST_IC_DEFINITIONS
	${IC_DEFINITIONS}
PARENT_SCOPE)

# forward of link dependencies

set(MOOST_STASH_LINK_DEPENDENCIES
	${STASH_LINK_DEPENDENCIES}
PARENT_SCOPE)

set(MOOST_UTILS_LINK_DEPENDENCIES
	${UTILS_LINK_DEPENDENCIES}
PARENT_SCOPE)

set(MOOST_MEMORY_LINK_DEPENDENCIES
	${MEMORY_LINK_DEPENDENCIES}
PARENT_SCOPE)

set(MOOST_THREAD_LINK_DEPENDENCIES
	${THREAD_LINK_DEPENDENCIES}
PARENT_SCOPE)

set(MOOST_IC_LINK_DEPENDENCIES
	${IC_LINK_DEPENDENCIES}
PARENT_SCOPE)

set(MOOST_FS_LINK_DEPENDENCIES
	${FS_LINK_DEPENDENCIES}
PARENT_SCOPE)
