enable_testing()
add_subdirectory(thread/test0)
add_subdirectory(thread/test1)
add_subdirectory(stash/echo)
add_subdirectory(stash/simple_server)
add_subdirectory(stash/multithread_server)
add_subdirectory(stash/timer)
add_subdirectory(stash/pair)
add_subdirectory(memory/pool)
add_subdirectory(ic/simple)
